--- a/nicepage.css
+++ b/nicepage.css
@@ -40747,7 +40747,7 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-table-alt-custom-color-1 tr:nth-child(even)
         {
             color: #ffffff;
-            background-color: #fd9c00;
+            background-color: #6f52eb;
         }
 
         .u-input.u-custom-color-1,
@@ -40756,7 +40756,7 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-button-style.u-custom-color-1[class*="u-border-"]
         {
             color: #ffffff !important;
-            background-color: #fd9c00 !important;
+            background-color: #6f52eb !important;
         }
 
         .u-button-style.u-custom-color-1:hover,
@@ -40771,7 +40771,7 @@ a.u-link.u-text-hover-grey-90:hover {
         li.active > .u-button-style.u-button-style.u-custom-color-1[class*="u-border-"]
         {
             color: #ffffff !important;
-            background-color: #e48c00 !important;
+            background-color: #5736e8 !important;
         }
 
         .u-hover-custom-color-1:hover,
@@ -40797,11 +40797,11 @@ a.u-link.u-text-hover-grey-90:hover {
         input.u-field-input.u-field-input.u-active-custom-color-1:checked
         {
             color: #ffffff !important;
-            background-color: #fd9c00 !important;
+            background-color: #6f52eb !important;
         }
 
         a.u-link.u-hover-custom-color-1:hover {
-            color: #fd9c00 !important;
+            color: #6f52eb !important;
         }
 
         
@@ -40816,7 +40816,7 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-table-alt-custom-color-2 tr:nth-child(even)
         {
             color: #ffffff;
-            background-color: #ff4242;
+            background-color: #961f1f;
         }
 
         .u-input.u-custom-color-2,
@@ -40825,7 +40825,7 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-button-style.u-custom-color-2[class*="u-border-"]
         {
             color: #ffffff !important;
-            background-color: #ff4242 !important;
+            background-color: #961f1f !important;
         }
 
         .u-button-style.u-custom-color-2:hover,
@@ -40840,7 +40840,7 @@ a.u-link.u-text-hover-grey-90:hover {
         li.active > .u-button-style.u-button-style.u-custom-color-2[class*="u-border-"]
         {
             color: #ffffff !important;
-            background-color: #ff2222 !important;
+            background-color: #871c1c !important;
         }
 
         .u-hover-custom-color-2:hover,
@@ -40866,11 +40866,11 @@ a.u-link.u-text-hover-grey-90:hover {
         input.u-field-input.u-field-input.u-active-custom-color-2:checked
         {
             color: #ffffff !important;
-            background-color: #ff4242 !important;
+            background-color: #961f1f !important;
         }
 
         a.u-link.u-hover-custom-color-2:hover {
-            color: #ff4242 !important;
+            color: #961f1f !important;
         }
 
         
@@ -41088,14 +41088,14 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-border-custom-color-1.u-field-input.u-field-input,
         .u-separator-custom-color-1:after
         {
-            border-color: #fd9c00;
-            stroke: #fd9c00;
+            border-color: #6f52eb;
+            stroke: #6f52eb;
         }
 
         .u-button-style.u-border-custom-color-1
         {
-            border-color: #fd9c00 !important;
-            color: #fd9c00 !important;
+            border-color: #6f52eb !important;
+            color: #6f52eb !important;
             background-color: transparent !important;
         }
 
@@ -41103,7 +41103,7 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-button-style.u-border-custom-color-1:focus
         {
             border-color: transparent !important;
-            color: #e48c00 !important;
+            color: #5736e8 !important;
             background-color: transparent !important;
         }
 
@@ -41119,18 +41119,18 @@ a.u-link.u-text-hover-grey-90:hover {
         li.active > a.u-button-style.u-button-style.u-border-active-custom-color-1,
         input.u-field-input.u-field-input.u-border-active-custom-color-1:checked
         {
-            color: #fd9c00 !important;
-            border-color: #fd9c00 !important;
+            color: #6f52eb !important;
+            border-color: #6f52eb !important;
         }
 
         .u-link.u-border-custom-color-1[class*="u-border-"]
         {
-            border-color: #fd9c00 !important;
+            border-color: #6f52eb !important;
         }
 
         .u-link.u-border-custom-color-1[class*="u-border-"]:hover
         {
-            border-color: #e48c00 !important;
+            border-color: #5736e8 !important;
         }
         
         
@@ -41139,14 +41139,14 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-border-custom-color-2.u-field-input.u-field-input,
         .u-separator-custom-color-2:after
         {
-            border-color: #ff4242;
-            stroke: #ff4242;
+            border-color: #961f1f;
+            stroke: #961f1f;
         }
 
         .u-button-style.u-border-custom-color-2
         {
-            border-color: #ff4242 !important;
-            color: #ff4242 !important;
+            border-color: #961f1f !important;
+            color: #961f1f !important;
             background-color: transparent !important;
         }
 
@@ -41154,7 +41154,7 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-button-style.u-border-custom-color-2:focus
         {
             border-color: transparent !important;
-            color: #ff2222 !important;
+            color: #871c1c !important;
             background-color: transparent !important;
         }
 
@@ -41170,18 +41170,18 @@ a.u-link.u-text-hover-grey-90:hover {
         li.active > a.u-button-style.u-button-style.u-border-active-custom-color-2,
         input.u-field-input.u-field-input.u-border-active-custom-color-2:checked
         {
-            color: #ff4242 !important;
-            border-color: #ff4242 !important;
+            color: #961f1f !important;
+            border-color: #961f1f !important;
         }
 
         .u-link.u-border-custom-color-2[class*="u-border-"]
         {
-            border-color: #ff4242 !important;
+            border-color: #961f1f !important;
         }
 
         .u-link.u-border-custom-color-2[class*="u-border-"]:hover
         {
-            border-color: #ff2222 !important;
+            border-color: #871c1c !important;
         }
         
         
@@ -41347,7 +41347,7 @@ a.u-link.u-text-hover-grey-90:hover {
         a.u-button-style.u-text-custom-color-1,
         a.u-button-style.u-text-custom-color-1[class*="u-border-"]
         {
-            color: #fd9c00 !important;
+            color: #6f52eb !important;
         }
 
         a.u-button-style.u-text-custom-color-1:hover,
@@ -41359,7 +41359,7 @@ a.u-link.u-text-hover-grey-90:hover {
         a.u-button-style.u-button-style.u-text-custom-color-1.active,
         a.u-button-style.u-button-style.u-text-custom-color-1[class*="u-border-"].active
         {
-            color: #e48c00 !important;
+            color: #5736e8 !important;
         }
 
         a.u-button-style:hover > .u-text-hover-custom-color-1,
@@ -41386,7 +41386,7 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-popupmenu-items.u-text-hover-custom-color-1 .u-nav-link:hover,
         .u-popupmenu-items.u-popupmenu-items.u-text-active-custom-color-1 .u-nav-link.active
         {
-            color: #fd9c00 !important;
+            color: #6f52eb !important;
         }
 
         .u-text-custom-color-1 .u-svg-link,
@@ -41395,17 +41395,17 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-button-style.u-button-style.active > .u-text-active-custom-color-1 .u-svg-link,
         .u-text-hover-custom-color-1:focus .u-svg-link
         {
-            fill: #fd9c00;
+            fill: #6f52eb;
         }
 
         .u-link.u-text-custom-color-1:hover
         {
-            color: #e48c00 !important;
+            color: #5736e8 !important;
         }
 
         a.u-link.u-text-hover-custom-color-1:hover
         {
-            color: #fd9c00 !important;
+            color: #6f52eb !important;
         }
         
         
@@ -41417,7 +41417,7 @@ a.u-link.u-text-hover-grey-90:hover {
         a.u-button-style.u-text-custom-color-2,
         a.u-button-style.u-text-custom-color-2[class*="u-border-"]
         {
-            color: #ff4242 !important;
+            color: #961f1f !important;
         }
 
         a.u-button-style.u-text-custom-color-2:hover,
@@ -41429,7 +41429,7 @@ a.u-link.u-text-hover-grey-90:hover {
         a.u-button-style.u-button-style.u-text-custom-color-2.active,
         a.u-button-style.u-button-style.u-text-custom-color-2[class*="u-border-"].active
         {
-            color: #ff2222 !important;
+            color: #871c1c !important;
         }
 
         a.u-button-style:hover > .u-text-hover-custom-color-2,
@@ -41456,7 +41456,7 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-popupmenu-items.u-text-hover-custom-color-2 .u-nav-link:hover,
         .u-popupmenu-items.u-popupmenu-items.u-text-active-custom-color-2 .u-nav-link.active
         {
-            color: #ff4242 !important;
+            color: #961f1f !important;
         }
 
         .u-text-custom-color-2 .u-svg-link,
@@ -41465,17 +41465,17 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-button-style.u-button-style.active > .u-text-active-custom-color-2 .u-svg-link,
         .u-text-hover-custom-color-2:focus .u-svg-link
         {
-            fill: #ff4242;
+            fill: #961f1f;
         }
 
         .u-link.u-text-custom-color-2:hover
         {
-            color: #ff2222 !important;
+            color: #871c1c !important;
         }
 
         a.u-link.u-text-hover-custom-color-2:hover
         {
-            color: #ff4242 !important;
+            color: #961f1f !important;
         }
         
         
