--- a/Home.css
+++ b/Home.css
@@ -270,13 +270,13 @@
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
   font-size: 3.75rem;
-  margin: 59px 337px 0 178px;
+  margin: 59px 339px 0 176px;
 }
 
 .u-section-2 .u-image-4 {
   width: 146px;
   height: 146px;
-  background-image: url("images/gunsbox.png");
+  background-image: url("images/skyzoned.png");
   background-position: 50% 50%;
   --animation-custom_in-translate_x: -400px;
   --animation-custom_in-translate_y: 0px;
@@ -284,14 +284,14 @@
   --animation-custom_in-rotate: 180deg;
   --animation-custom_in-scale: 1;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -35px auto 0 20px;
+  margin: -35px auto 0 18px;
 }
 
 .u-section-2 .u-text-9 {
   --animation-custom_in-translate_x: -200px;
   --animation-custom_in-scale: 1;
   font-size: 1.25rem;
-  margin: -105px 641px 0 178px;
+  margin: -105px 643px 0 176px;
 }
 
 .u-section-2 .u-text-10 {
@@ -303,13 +303,13 @@
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
   font-size: 3.75rem;
-  margin: 59px 337px 0 178px;
+  margin: 59px 339px 0 176px;
 }
 
 .u-section-2 .u-image-5 {
   width: 146px;
   height: 146px;
-  background-image: url("images/skyzoned.png");
+  background-image: url("images/gunsbox.png");
   background-position: 50% 50%;
   --animation-custom_in-translate_x: -400px;
   --animation-custom_in-translate_y: 0px;
@@ -317,14 +317,14 @@
   --animation-custom_in-rotate: 180deg;
   --animation-custom_in-scale: 1;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -35px auto 0 20px;
+  margin: -35px auto 0 18px;
 }
 
 .u-section-2 .u-text-11 {
   --animation-custom_in-translate_x: -200px;
   --animation-custom_in-scale: 1;
   font-size: 1.25rem;
-  margin: -105px 641px 60px 178px;
+  margin: -105px 643px 60px 176px;
 }
 
 @media (max-width: 1199px) {
@@ -370,9 +370,8 @@
   }
 
   .u-section-2 .u-text-8 {
-    margin-top: 409px;
-    margin-right: 237px;
-    margin-left: 78px;
+    margin-right: 239px;
+    margin-left: 76px;
   }
 
   .u-section-2 .u-image-4 {
@@ -381,18 +380,23 @@
 
   .u-section-2 .u-text-9 {
     margin-top: 20px;
-    margin-right: 541px;
-    margin-left: 78px;
+    margin-right: 543px;
+    margin-left: 76px;
   }
 
   .u-section-2 .u-text-10 {
-    margin-right: 237px;
-    margin-left: 78px;
+    margin-right: 239px;
+    margin-left: 76px;
+  }
+
+  .u-section-2 .u-image-5 {
+    margin-top: 20px;
   }
 
   .u-section-2 .u-text-11 {
-    margin-right: 541px;
-    margin-left: 78px;
+    margin-top: 20px;
+    margin-right: 543px;
+    margin-left: 76px;
   }
 }
 
@@ -474,7 +478,6 @@
   }
 
   .u-section-2 .u-text-8 {
-    margin-top: 451px;
     margin-right: 0;
   }
 
@@ -518,7 +521,6 @@
 
   .u-section-2 .u-text-8 {
     font-size: 3rem;
-    margin-top: 433px;
   }
 
   .u-section-2 .u-text-9 {
